# Comp_Escalavel_A2

./: .gitignore  Dockerfile  README.md  app.py  config.yaml  create_db.py  delta_lake.py  docker-compose-apps.yml  docker-compose-historico.yml  docker-compose-kafka.yml  docker-compose-realtime.yml  docker-compose-redis.yml  docker-compose.yml  log4j.properties  persist_sim_consumer.py  producer.py  publish_historical_to_redis.py  pyproject.toml  requirements-platform.txt  requirements.txt  run_pipeline_spark_bash.py  spark_consumer.py  spark_delta.py  spark_delta_cleaning.py  spark_delta_config.py
data_platform/: check_bronze.py
data_source_setup/: producer.py  requirements-source.txt
data_source_setup/db/: carga_inicial.py
db/: carga_inicial.py  create_db.py  db_config.py  verifica_db.py
historical-pipeline/: abandoned_cart_rate.py  bronze_pipeline.py  calculate_revenue_growth.py  etl_jobs.py  historical_metrics_pipeline.py  metric_revenue_growth.py  metrics_jobs.py  metrics_pipeline.py  most_sold_product.py  publish_to_redis.py  run_pipeline_spark_bash.py  spark_consumer.py  spark_delta_config.py
kafka/: docker-compose.yml
simuladores/: gen_functions.py  producer.py
src/: app.py  db_import.py  persist_sim_consumer.py  producer.py  spark_consumer.py  test.py
src/config/: __init__.py  aws.py  local.py
src/db/: carga_inicial.py  create_db.py  db_config.py  verifica_db.py
src/historical-pipeline/: bronze_read_data.py  etl_jobs.py  metrics_jobs.py  most_sold_product.py  run_pipeline_bronze_phase.py  spark_delta_config.py
(+11 files in other folders)
