[project]
name = "comp-escalavel-a2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faker==37.4.0",
    "faker-commerce==1.0.4",
    "kafka-python>=2.2.11",
    "pandas>=2.3.0",
    "psycopg2==2.9.10",
    "redis>=6.2.0",
    "pyspark>=4.0.0",
]
